--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,5 +13,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Publish
-      run: mvn deploy -Dregistry=https://maven.pkg.github.com/hashashin -Dtoken=${{ secrets.GITHUB_TOKEN }}
+    - name: Deploy to Github Package Registry
+      env:
+        GITHUB_USERNAME: x-access-token
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: mvn --settings settings.xml deploy
